Actually, we don't need those private IPs

--- a/00-etcd.yaml
+++ b/00-etcd.yaml
@@ -2,7 +2,7 @@
 
 coreos:
   etcd2:
-    advertise-client-urls: http://$private_ipv4:2379
+    advertise-client-urls: http://$public_ipv4:2379
     listen-client-urls: http://0.0.0.0:2379
   units:
     - name: etcd2.service
