--- a/02-worker.yaml
+++ b/02-worker.yaml
@@ -67,7 +67,7 @@ write_files:
 
 coreos:
   flannel:
-    iface: $private_ipv4
+    iface: $public_ipv4
     etcd_endpoints: http://${ETCD_IP}:2379
 
   units:
@@ -89,7 +89,7 @@ coreos:
           --register-node=true \
           --allow-privileged=true \
           --config=/etc/kubernetes/manifests \
-          --hostname-override=$private_ipv4 \
+          --hostname-override=$public_ipv4 \
           --cluster-dns=${DNS_SERVICE_IP} \
           --cluster-domain=cluster.local \
           --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml \
