--- a/secrets/openssl.cnf.template
+++ b/secrets/openssl.cnf.template
@@ -10,6 +10,5 @@ subjectAltName = @alt_names
 DNS.1 = kubernetes
 DNS.2 = kubernetes.default
 IP.1 = 10.3.0.1
-IP.2 = ${MASTER_HOST_PUB_IP}
-IP.3 = ${MASTER_HOST_PVT_IP}
+IP.2 = ${MASTER_HOST}
 
