--- a/02-worker.yaml
+++ b/02-worker.yaml
@@ -96,6 +96,43 @@ coreos:
   units:
     - name: flanneld.service
       command: start
+      content: |
+        [Unit]
+        Description=Network fabric for containers
+        Documentation=https://github.com/coreos/flannel
+        Requires=early-docker.service
+        After=etcd.service etcd2.service early-docker.service
+        Before=early-docker.target
+
+        [Service]
+        Type=notify
+        Restart=always
+        RestartSec=5
+        Environment="TMPDIR=/var/tmp/"
+        Environment="DOCKER_HOST=unix:///var/run/early-docker.sock"
+        Environment="FLANNEL_VER=0.5.5"
+        Environment="ETCD_SSL_DIR=/etc/ssl/etcd"
+        Environment="FLANNEL_ENV_FILE=/run/flannel/options.env"
+        LimitNOFILE=40000
+        LimitNPROC=1048576
+        ExecStartPre=/sbin/modprobe ip_tables
+        ExecStartPre=/usr/bin/mkdir -p /run/flannel
+        ExecStartPre=/usr/bin/mkdir -p $${ETCD_SSL_DIR}
+        ExecStartPre=-/usr/bin/touch $${FLANNEL_ENV_FILE}
+
+        ExecStart=/usr/libexec/sdnotify-proxy /run/flannel/sd.sock \
+          /usr/bin/docker run --net=host --privileged=true --rm \
+          --volume=/run/flannel:/run/flannel \
+          --env=NOTIFY_SOCKET=/run/flannel/sd.sock \
+          --env-file=$${FLANNEL_ENV_FILE} \
+          --volume=/usr/share/ca-certificates:/etc/ssl/certs:ro \
+          --volume=$${ETCD_SSL_DIR}:/etc/ssl/etcd:ro \
+          quay.io/coreos/flannel:$${FLANNEL_VER} /opt/bin/flanneld --ip-masq=true
+
+        # Update docker options
+        ExecStartPost=/usr/bin/docker run --net=host --rm -v /run:/run \
+          quay.io/coreos/flannel:$${FLANNEL_VER} \
+          /opt/bin/mk-docker-opts.sh -d /run/flannel_docker_opts.env -i
     - name: docker.service
       command: start
       drop-ins:
