--- a/02-worker.yaml
+++ b/02-worker.yaml
@@ -1,169 +1,112 @@
 #cloud-config
 
+
 write_files:
-  - path: "/opt/bin/download-k8s-binary"
+  - path: "/etc/flannel/options.env"
     permissions: "0755"
     content: |
-      #!/bin/bash
-
-      K8S_VERSION=v1.2.0
-
-      mkdir -p /opt/bin
-
-      FILE=$$1
-      if [ ! -f /opt/bin/$$FILE ]; then
-        curl -sSL -o /opt/bin/$$FILE https://storage.googleapis.com/kubernetes-release/release/$${K8S_VERSION}/bin/linux/amd64/$$FILE
-        chmod +x /opt/bin/$$FILE
-      else
-        # we check the version of the binary
-        INSTALLED_VERSION=$$(/opt/bin/$$FILE --version)
-        MATCH=$$(echo "$${INSTALLED_VERSION}" | grep -c "$${K8S_VERSION}")
-        if [ $$MATCH -eq 0 ]; then
-          # the version is different
-          curl -sSL -o /opt/bin/$$FILE https://storage.googleapis.com/kubernetes-release/release/$${K8S_VERSION}/bin/linux/amd64/$$FILE
-          chmod +x /opt/bin/$$FILE
-        fi
-      fi
-  - path: "/etc/kubernetes/manifests/kube-proxy.yaml"
-    permissions: "0644"
-    owner: "root"
+        FLANNELD_IFACE=$public_ipv4
+        FLANNELD_ETCD_ENDPOINTS=https://${ETCD_IP}:2379
+        FLANNELD_ETCD_CAFILE=/etc/ssl/etcd/ca.pem
+        FLANNELD_ETCD_CERTFILE=/etc/ssl/etcd/worker.pem
+        FLANNELD_ETCD_KEYFILE=/etc/ssl/etcd/worker-key.pem
+  - path: "/etc/systemd/system/flanneld.service.d/40-ExecStartPre-symlink.conf"
+    permissions: "0755"
     content: |
-      apiVersion: v1
-      kind: Pod
-      metadata:
-        name: kube-proxy
-        namespace: kube-system
-      spec:
-        hostNetwork: true
-        containers:
-        - name: kube-proxy
-          image: gcr.io/google_containers/hyperkube:v1.2.0
-          command:
-          - /hyperkube
-          - proxy
-          - --master=https://${MASTER_HOST}
-          - --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml
-          - --proxy-mode=iptables
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - mountPath: /etc/ssl/certs
-              name: "ssl-certs"
-            - mountPath: /etc/kubernetes/worker-kubeconfig.yaml
-              name: "kubeconfig"
-              readOnly: true
-            - mountPath: /etc/kubernetes/ssl
-              name: "etc-kube-ssl"
-              readOnly: true
-        volumes:
-          - name: "ssl-certs"
-            hostPath:
-              path: "/usr/share/ca-certificates"
-          - name: "kubeconfig"
-            hostPath:
-              path: "/etc/kubernetes/worker-kubeconfig.yaml"
-          - name: "etc-kube-ssl"
-            hostPath:
-              path: "/etc/kubernetes/ssl"
-
-  - path: "/etc/kubernetes/worker-kubeconfig.yaml"
-    permissions: "0644"
-    owner: "root"
+        [Service]
+        ExecStartPre=/usr/bin/ln -sf /etc/flannel/options.env /run/flannel/options.env
+  - path: "/etc/systemd/system/docker.service.d/40-flannel.conf"
+    permissions: "0755"
     content: |
-      apiVersion: v1
-      kind: Config
-      clusters:
-      - name: local
-        cluster:
-          certificate-authority: /etc/kubernetes/ssl/ca.pem
-      users:
-      - name: kubelet
-        user:
-          client-certificate: /etc/kubernetes/ssl/worker.pem
-          client-key: /etc/kubernetes/ssl/worker-key.pem
-      contexts:
-      - context:
-          cluster: local
-          user: kubelet
-        name: kubelet-context
-      current-context: kubelet-context
-
-coreos:
-  flannel:
-    iface: $public_ipv4
-    etcd_endpoints: http://${ETCD_IP}:2379
-
-  units:
-    - name: flanneld.service
-      content: |
         [Unit]
-        Description=Network fabric for containers
-        Documentation=https://github.com/coreos/flannel
-        Requires=early-docker.service
-        After=etcd.service etcd2.service early-docker.service
-        Before=early-docker.target
-
+        Requires=flanneld.service
+        After=flanneld.service
+  - path: "/etc/systemd/system/kubelet.service"
+    permissions: "0755"
+    content: |
         [Service]
-        Type=notify
-        Restart=always
-        RestartSec=5
-        Environment="TMPDIR=/var/tmp/"
-        Environment="DOCKER_HOST=unix:///var/run/early-docker.sock"
-        Environment="FLANNEL_VER=0.5.5"
-        Environment="ETCD_SSL_DIR=/etc/ssl/etcd"
-        Environment="FLANNEL_ENV_FILE=/run/flannel/options.env"
-        LimitNOFILE=40000
-        LimitNPROC=1048576
-        ExecStartPre=/sbin/modprobe ip_tables
-        ExecStartPre=/usr/bin/mkdir -p /run/flannel
-        ExecStartPre=/usr/bin/mkdir -p $${ETCD_SSL_DIR}
-        ExecStartPre=-/usr/bin/touch $${FLANNEL_ENV_FILE}
+        ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
+        ExecStartPre=/usr/bin/mkdir -p /var/log/containers
 
-        ExecStart=/usr/libexec/sdnotify-proxy /run/flannel/sd.sock \
-          /usr/bin/docker run --net=host --privileged=true --rm \
-          --volume=/run/flannel:/run/flannel \
-          --env=NOTIFY_SOCKET=/run/flannel/sd.sock \
-          --env-file=$${FLANNEL_ENV_FILE} \
-          --volume=/usr/share/ca-certificates:/etc/ssl/certs:ro \
-          --volume=$${ETCD_SSL_DIR}:/etc/ssl/etcd:ro \
-          quay.io/coreos/flannel:$${FLANNEL_VER} /opt/bin/flanneld --ip-masq=true
+        Environment=KUBELET_VERSION=v1.3.6_coreos.0
+        Environment="RKT_OPTS=--volume var-log,kind=host,source=/var/log \
+          --mount volume=var-log,target=/var/log \
+          --volume dns,kind=host,source=/etc/resolv.conf \
+          --mount volume=dns,target=/etc/resolv.conf"
 
-        # Update docker options
-        ExecStartPost=/usr/bin/docker run --net=host --rm -v /run:/run \
-          quay.io/coreos/flannel:$${FLANNEL_VER} \
-          /opt/bin/mk-docker-opts.sh -d /run/flannel_docker_opts.env -i
-    - name: docker.service
-      drop-ins:
-        - name: "40-flannel.conf"
-          content: |
-            [Unit]
-            Requires=flanneld.service
-            After=flanneld.service
-
-            [Service]
-            Restart=always
-            Restart=on-failure
-    - name: kubelet.service
-      content: |
-        # /usr/lib64/systemd/system/kubelet.service
-        [Unit]
-        Description=Kubernetes Kubelet
-
-        [Service]
-        ExecStartPre=/bin/bash -c "/opt/bin/download-k8s-binary kubelet"
-        ExecStart=/opt/bin/kubelet \
+        ExecStart=/usr/lib/coreos/kubelet-wrapper \
+          --api-servers=https://${MASTER_HOST} \
+          --network-plugin-dir=/etc/kubernetes/cni/net.d \
+          --register-node=true \
           --allow-privileged=true \
-          --api_servers=https://${MASTER_HOST} \
-          --cluster-dns=${DNS_SERVICE_IP} \
-          --cluster_domain=cluster.local \
           --config=/etc/kubernetes/manifests \
           --hostname-override=$public_ipv4 \
+          --cluster-dns=${DNS_SERVICE_IP} \
+          --cluster-domain=cluster.local \
           --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml \
-          --register-node=true \
           --tls-cert-file=/etc/kubernetes/ssl/worker.pem \
           --tls-private-key-file=/etc/kubernetes/ssl/worker-key.pem
-        Restart=on-failure
-        RestartSec=5
-
+        Restart=always
+        RestartSec=10
         [Install]
         WantedBy=multi-user.target
+  - path: "/etc/kubernetes/manifests/kube-proxy.yaml"
+    permissions: "0755"
+    content: |
+        apiVersion: v1
+        kind: Pod
+        metadata:
+          name: kube-proxy
+          namespace: kube-system
+        spec:
+          hostNetwork: true
+          containers:
+          - name: kube-proxy
+            image: quay.io/coreos/hyperkube:v1.3.6_coreos.0
+            command:
+            - /hyperkube
+            - proxy
+            - --master=https://${MASTER_HOST}
+            - --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml
+            - --proxy-mode=iptables
+            securityContext:
+              privileged: true
+            volumeMounts:
+              - mountPath: /etc/ssl/certs
+                name: "ssl-certs"
+              - mountPath: /etc/kubernetes/worker-kubeconfig.yaml
+                name: "kubeconfig"
+                readOnly: true
+              - mountPath: /etc/kubernetes/ssl
+                name: "etc-kube-ssl"
+                readOnly: true
+          volumes:
+            - name: "ssl-certs"
+              hostPath:
+                path: "/usr/share/ca-certificates"
+            - name: "kubeconfig"
+              hostPath:
+                path: "/etc/kubernetes/worker-kubeconfig.yaml"
+            - name: "etc-kube-ssl"
+              hostPath:
+                path: "/etc/kubernetes/ssl"
+  - path: "/etc/kubernetes/worker-kubeconfig.yaml"
+    permissions: "0755"
+    content: |
+        apiVersion: v1
+        kind: Config
+        clusters:
+        - name: local
+          cluster:
+            certificate-authority: /etc/kubernetes/ssl/ca.pem
+        users:
+        - name: kubelet
+          user:
+            client-certificate: /etc/kubernetes/ssl/worker.pem
+            client-key: /etc/kubernetes/ssl/worker-key.pem
+        contexts:
+        - context:
+            cluster: local
+            user: kubelet
+          name: kubelet-context
+        current-context: kubelet-context
