--- a/00-etcd.yaml
+++ b/00-etcd.yaml
@@ -2,8 +2,12 @@
 
 coreos:
   etcd2:
-    advertise-client-urls: http://$public_ipv4:2379
-    listen-client-urls: http://0.0.0.0:2379
+    advertise-client-urls: https://$public_ipv4:2379
+    listen-client-urls: https://0.0.0.0:2379
+    client-cert-auth: true
+    trusted-ca-file: /etc/kubernetes/ssl/ca.pem
+    cert-file: /etc/kubernetes/ssl/etcd.pem
+    key-file: /etc/kubernetes/ssl/etcd-key.pem
   units:
     - name: etcd2.service
       command: start
