--- a/01-master.yaml
+++ b/01-master.yaml
@@ -1,6 +1,12 @@
 #cloud-config
 
 write_files:
+  - path: "/etc/profile.env"
+    content: |
+        export ENABLE_CLUSTER_DNS="true"
+        export DNS_SERVER_IP="10.3.0.10"
+        export DNS_DOMAIN="cluster.local"
+        export DNS_REPLICAS=1
   - path: "/etc/flannel/options.env"
     permissions: "0755"
     content: |
@@ -129,7 +135,7 @@ write_files:
   - path: "/etc/kubernetes/manifests/kube-controller-manager.yaml"
     permissions: "0755"
     content: |
-        piVersion: v1
+        apiVersion: v1
         kind: Pod
         metadata:
           name: kube-controller-manager
