--- a/01-master.yaml
+++ b/01-master.yaml
@@ -27,7 +27,7 @@ write_files:
         ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
         ExecStartPre=/usr/bin/mkdir -p /var/log/containers
 
-        Environment=KUBELET_VERSION=v1.3.6_coreos.0
+        Environment=KUBELET_VERSION=${HYPERCUBE_VERSION}
         Environment="RKT_OPTS=--volume var-log,kind=host,source=/var/log \
           --mount volume=var-log,target=/var/log \
           --volume dns,kind=host,source=/etc/resolv.conf \
@@ -58,7 +58,7 @@ write_files:
           hostNetwork: true
           containers:
           - name: kube-apiserver
-            image: quay.io/coreos/hyperkube:v1.3.6_coreos.0
+            image: quay.io/coreos/hyperkube:${HYPERCUBE_VERSION}
             command:
             - /hyperkube
             - apiserver
@@ -110,7 +110,7 @@ write_files:
           hostNetwork: true
           containers:
           - name: kube-proxy
-            image: quay.io/coreos/hyperkube:v1.3.6_coreos.0
+            image: quay.io/coreos/hyperkube:${HYPERCUBE_VERSION}
             command:
             - /hyperkube
             - proxy
@@ -138,7 +138,7 @@ write_files:
           hostNetwork: true
           containers:
           - name: kube-controller-manager
-            image: quay.io/coreos/hyperkube:v1.3.6_coreos.0
+            image: quay.io/coreos/hyperkube:${HYPERCUBE_VERSION}
             command:
             - /hyperkube
             - controller-manager
@@ -179,7 +179,7 @@ write_files:
           hostNetwork: true
           containers:
           - name: kube-scheduler
-            image: quay.io/coreos/hyperkube:v1.3.6_coreos.0
+            image: quay.io/coreos/hyperkube:${HYPERCUBE_VERSION}
             command:
             - /hyperkube
             - scheduler
