--- a/00-etcd.yaml
+++ b/00-etcd.yaml
@@ -2,7 +2,7 @@
 
 coreos:
   etcd2:
-    advertise-client-urls: https://$public_ipv4:2379
+    advertise-client-urls: https://$private_ipv4:2379 # multi-region and multi-cloud deployments need to use $public_ipv4
     listen-client-urls: https://0.0.0.0:2379
     client-cert-auth: true
     trusted-ca-file: /etc/kubernetes/ssl/ca.pem
