--- a/02-worker.yaml
+++ b/02-worker.yaml
@@ -5,7 +5,7 @@ write_files:
   - path: "/etc/flannel/options.env"
     permissions: "0755"
     content: |
-        FLANNELD_IFACE=$public_ipv4
+        FLANNELD_IFACE=$private_ipv4
         FLANNELD_ETCD_ENDPOINTS=https://${ETCD_IP}:2379
         FLANNELD_ETCD_CAFILE=/etc/ssl/etcd/ca.pem
         FLANNELD_ETCD_CERTFILE=/etc/ssl/etcd/worker.pem
@@ -40,7 +40,7 @@ write_files:
           --register-node=true \
           --allow-privileged=true \
           --config=/etc/kubernetes/manifests \
-          --hostname-override=$public_ipv4 \
+          --hostname-override=$private_ipv4 \
           --cluster-dns=${DNS_SERVICE_IP} \
           --cluster-domain=cluster.local \
           --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml \
